[package]
name = "cosock-test-server"
version = "0.1.8"
edition = "2021"
repository = "https://github.com/cosock/test-http-server"

[dependencies]
axum = "0.7.9"
axum-server = { version = "0.7.1", features = ["tls-openssl"] }
tokio = { version = "1.42.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
